fix(tag-list): avoid stretched close buttons

--- a/src/components/TagList/TagList.scss
+++ b/src/components/TagList/TagList.scss
@@ -49,7 +49,6 @@
 	background: $color-gray-200;
 	color: #FFF;
 	text-align: center;
-	flex: 1 1 100%;
 	border: none;
 	width: 1.8rem;
 	height: 1.8rem;
